# gmail-mcp-server-

./: .gitignore  README.md  pyproject.toml
docs/: API.md  CHANGELOG.md  MIGRATION.md  OAUTH_TROUBLESHOOTING.md  QUICKSTART.md  README.md  SECURITY.md
src/gmail/: constants.py  server.py  server_enhanced.py
src/gmail/services/: __init__.py  gmail_service.py  gmail_service_enhanced.py  security.py
tests/: __init__.py  test_gmail_service.py
